--- a/Concentraion 2/Base.lproj/Main.storyboard
+++ b/Concentraion 2/Base.lproj/Main.storyboard
@@ -20,8 +20,8 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Concentration" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kyc-jo-ScW">
-                                <rect key="frame" x="49" y="50" width="277.66666666666669" height="43"/>
-                                <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="34"/>
+                                <rect key="frame" x="72.666666666666686" y="50" width="231" height="45.666666666666657"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="38"/>
                                 <color key="textColor" red="0.63529411764705879" green="0.93725490196078431" blue="0.26666666666666666" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -205,8 +205,9 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eI7-kN-q7p">
-                                <rect key="frame" x="112" y="735" width="151" height="43"/>
-                                <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="24"/>
+                                <rect key="frame" x="0.33333333333334281" y="727" width="374.66666666666663" height="51"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                 <state key="normal" title="New Game">
                                     <color key="titleColor" red="0.63529411764705879" green="0.93725490196078431" blue="0.26666666666666666" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
@@ -215,11 +216,11 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Points: 0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EwA-6Q-AZz">
-                                <rect key="frame" x="16" y="684" width="343" height="36"/>
+                                <rect key="frame" x="16" y="676" width="343" height="36"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="36" id="H6b-yk-ffj"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                 <color key="textColor" red="0.63529411764705879" green="0.93725490196078431" blue="0.26666666666666666" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -229,7 +230,7 @@
                             <constraint firstItem="eI7-kN-q7p" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="59h-TN-2AC"/>
                             <constraint firstItem="Kyc-jo-ScW" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="6LU-fS-ZvW"/>
                             <constraint firstItem="EwA-6Q-AZz" firstAttribute="leading" secondItem="HXf-ld-oFD" secondAttribute="leading" id="Fjy-3k-DKN"/>
-                            <constraint firstItem="eI7-kN-q7p" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" symbolic="YES" id="P6e-gj-eGd"/>
+                            <constraint firstItem="eI7-kN-q7p" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="P6e-gj-eGd"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="HXf-ld-oFD" secondAttribute="bottom" constant="154" id="PbO-WU-g5H"/>
                             <constraint firstItem="HXf-ld-oFD" firstAttribute="top" relation="lessThanOrEqual" secondItem="Kyc-jo-ScW" secondAttribute="bottom" constant="16" id="cFJ-C0-iUa"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Kyc-jo-ScW" secondAttribute="trailing" id="crb-GK-rGx"/>
@@ -238,7 +239,7 @@
                             <constraint firstItem="Kyc-jo-ScW" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="igk-dM-42H"/>
                             <constraint firstItem="EwA-6Q-AZz" firstAttribute="trailing" secondItem="HXf-ld-oFD" secondAttribute="trailing" id="ijy-Np-HTy"/>
                             <constraint firstItem="EwA-6Q-AZz" firstAttribute="top" relation="lessThanOrEqual" secondItem="HXf-ld-oFD" secondAttribute="bottom" constant="60" id="nbx-fD-Lk1"/>
-                            <constraint firstAttribute="trailing" secondItem="eI7-kN-q7p" secondAttribute="trailing" constant="112" id="rCo-PS-qb7"/>
+                            <constraint firstAttribute="trailing" secondItem="eI7-kN-q7p" secondAttribute="trailing" id="rCo-PS-qb7"/>
                             <constraint firstItem="HXf-ld-oFD" firstAttribute="leading" relation="lessThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="rP5-3H-vaW"/>
                             <constraint firstItem="Kyc-jo-ScW" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="6" id="srS-Ll-O8w"/>
                             <constraint firstItem="HXf-ld-oFD" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="65" id="u8W-AM-hXo"/>
